Implement authentication system: custom user model, migrations, signup/login templates, and updated URLs/settings.

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,5 +3,6 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to Home Page.</h1>
+<h1 class='bg-pink-500'>Welcome to Home Page.</h1>
+
 {% endblock %}
