feat(auth): integrate Google OAuth2 and email authentication using Django Allauth
- Set up Google social authentication
- Configured email backend using Gmail SMTP
- Updated CustomUser model and migrations
- Adjusted URLs and templates accordingly

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
+{% load account %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<h1>Hii {% user_display user %}</h1>
 <h1 class='bg-pink-500'>Welcome to Home Page.</h1>
+<div><a href="{% url "account_logout" %}">Logout</a></div>
+<h2>hell</h2>
+<h4>hell</h4>
+<h5>hell</h5>
 
 {% endblock %}
