--- a/project/templates/chat/chat.html
+++ b/project/templates/chat/chat.html
@@ -11,7 +11,8 @@
     {% tailwind_css %}
 </head>
 <body class="bg-gradient-to-br from-blue-900 via-purple-900 to-pink-900 min-h-screen flex flex-col items-center justify-center">
-    <div class="w-full max-w-xl mx-auto bg-white/10 backdrop-blur-lg rounded-xl shadow-2xl p-8">
+
+    <main class="w-full max-w-xl mx-4 bg-white/10 backdrop-blur-lg rounded-xl shadow-2xl p-8">
         <div class="flex flex-col items-center mb-8">
             <span class="text-lg font-medium text-gray-200">Hi,</span>
             <span class="text-3xl font-extrabold text-pink-600 dark:text-pink-400 mt-2">{% user_display user %}</span>
@@ -29,7 +30,7 @@
                 Send
             </button>
         </form>
-    </div>
+    </main>
 
     <span id="room-name" hidden>{{ room_name|json_script:"room-name" }}</span>
     <script src='{% static "chat/chat_script.js" %}'></script>
